--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet CosmicBattles.sln restore
     - name: Build
       run: dotnet build CosmicBattles.sln --no-restore
     - name: Test
