--- a/src/PlayerService/PlayerService.csproj
+++ b/src/PlayerService/PlayerService.csproj
@@ -14,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.7" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Confluent.Kafka" Version="2.3.0" />
