--- a/src/BattleService/BattleService.csproj
+++ b/src/BattleService/BattleService.csproj
@@ -7,6 +7,7 @@
 	<ItemGroup>
 		<PackageReference Include="Confluent.Kafka" Version="2.11.0" />
 		<PackageReference Include="Confluent.Kafka.Extensions.OpenTelemetry" Version="0.4.0" />
+		<PackageReference Include="FluentValidation" Version="12.0.0" />
 		<PackageReference Include="Google.Protobuf" Version="3.31.1" />
 		<PackageReference Include="Grpc.AspNetCore.Server" Version="2.71.0" />
 		<PackageReference Include="Grpc.Core" Version="2.46.6" />
